--- a/config.env
+++ b/config.env
@@ -1,6 +1,6 @@
 PORT = 4000
 
-FRONTEND_URL=http://localhost:5175/
+FRONTEND_URL=https://fitness-tracker-oyxh.onrender.com/
 
 SMTP_HOST=smpt.gmail.com
 
